Archive2/d5/2c144e39191515/output
main.cpp:13:19: error: use of undeclared identifier 'i'; did you mean 'M::B::i'?
            int a[i];
                  ^
                  M::B::i
main.cpp:5:33: note: 'M::B::i' declared here
        public:static const int i = 1000;
                                ^
1 error generated.
